--- a/android/src/main/res/layout/fragment_nav_view.xml
+++ b/android/src/main/res/layout/fragment_nav_view.xml
@@ -17,14 +17,13 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true">
     <fragment
         android:id="@+id/navigation_fragment2"
         android:name="com.google.android.libraries.navigation.SupportNavigationFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
